--- a/style.css
+++ b/style.css
@@ -9,28 +9,30 @@ body {
   background-color: #000000;
   color: #ffffff;
   font-family: Ubuntu;
+  line-height: 150%;
+  margin-bottom: 50px;
 }
 
-#wrapper {
-  text-align: center;
+#left {
+  width: 66%;
+  float: left;
+  margin: 0 2%;
+}
+#right {
+  width: 26%;
+  float: left;
+  margin: 0 2%;
 }
 
 h1 {
   text-align: center;
-  background-image: url("ubuntu.png");
-  background-position: right top;
-  background-repeat: no-repeat;
-  padding: 0 110px 0 0;
-  display: inline-block;
-  min-height: 100px;
   font-size: 85px;
 }
 
 #cmd {
-  font-size: 25px;
+  font-size: 20px;
   text-align: left;
   padding: 20px;
-  margin: 0 50px 50px 50px;
   border: 1px solid #333;
   background-color: #111;
   display: block;
@@ -40,28 +42,45 @@ h1 {
 }
 
 #details {
-  margin: 50px auto;
   text-align: left;
-  border: 1px solid #333;
-  background-color: #111;
 }
-#details #header {
+h2 {
   text-align: center;
   font-size: 20px;
+  font-weight: normal;
 }
 #details td {
   padding: 10px;
+}
+#details tr.even {
+  background-color: #111;
+}
+#details tr.odd {
+  background-color: #222;
 }
 
 a {
   color: #999;
 }
 
-.more-info {
-  font-size: 11px;
-  text-align: right;
-}
-
 td {
   width: 50%;
 }
+
+.center {
+  text-align: center;
+}
+
+.clear {
+  clear: both;
+}
+
+.spacer {
+  height: 100px;
+}
+
+.disclaimer {
+  font-size: 0.8em;
+  color: #f0f0f0;
+}
+
