A little bit of HTML5 standarzation:
- fixed the DOCTYPE to match the HTML5 doctype.
- added viewport meta tag to make the site more mobile-friendly
- changed line-height % to em
- updated charset meta format
- added description meta

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background-color: #000000;
   color: #ffffff;
   font-family: Ubuntu;
-  line-height: 150%;
+  line-height: 1.5em;
   margin-bottom: 50px;
 }
 
