--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
-  src: local('Ubuntu'), url(ubuntu.woff) format('woff');
+  src: local('Ubuntu'), url(fonts/ubuntu.woff) format('woff');
 }
 
 body {
