Add fallback fonts.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body {
   background-color: #000000;
   color: #ffffff;
-  font-family: Ubuntu;
+  font-family: 'Ubuntu', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.5em;
 }
 
