--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
   font-family: 'Ubuntu';
   font-style: normal;
   font-weight: normal;
-  src: local('Ubuntu'), url(../fonts/ubuntu.woff) format('woff');
+  src: url(../fonts/ubuntu.woff) format('woff');
 }
 
 body {
-  background-color: #000000;
-  color: #ffffff;
+  background-color: black;
+  color: white;
   font-family: 'Ubuntu', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.5em;
 }
