--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,18 @@ body {
 }
 
 h1 {
+  background: url("../img/ubuntu.png") right top no-repeat;
+  display: inline-block;
   font-size: 85px;
   line-height: 100%;
   margin: 0;
-  background-image: url(../img/ubuntu.png);
-  background-position: right top;
-  background-repeat: no-repeat;
   padding-right: 70px;
-  display: inline-block;
 }
 
 h2 {
-  text-align: center;
   font-size: 20px;
   font-weight: normal;
+  text-align: center;
 }
 
 a {
