This big script to copy/paste is starting to get unweildy. Switch to pipe from wget.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@ a {
 
 .cmd {
   font-size: 20px;
-  text-align: left;
+  text-align: center;
   padding: 20px;
   border: 1px solid #333;
   background-color: #111;
